src/objects/Response_Logger__c/Response_Logger__c.object-meta.xml
<CustomObject>
    <label>Response Logger</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Response Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>