src/objects/Response_Logger__c/fields/Export_By__c.field-meta.xml
<CustomField>
    <fullName>Export_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Export By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Response_Logger</relationshipName>
    <type>Lookup</type>
</CustomField>