src/objects/Response_Logger__c/fields/Export_Time__c.field-meta.xml
<CustomField>
    <fullName>Export_Time__c</fullName>
    <label>Export Time</label>
    <type>DateTime</type>
</CustomField>