src/objects/Response_Logger__c/fields/Order1__c.field-meta.xml
<CustomField>
    <fullName>Order1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Response Logger</relationshipLabel>
    <relationshipName>Response_Logger</relationshipName>
    <type>Lookup</type>
</CustomField>