src/objects/Response_Logger__c/fields/XMLRequest__c.field-meta.xml
<CustomField>
    <fullName>XMLRequest__c</fullName>
    <label>XMLRequest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>